--- a/RelativeDateAndNumbers.csproj
+++ b/RelativeDateAndNumbers.csproj
@@ -4,10 +4,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>Relative_Date_Time</AssemblyName>
         <PackageId>RelativeDateTime.Net</PackageId>
         <Version>1.0.0</Version>
         <Authors>Breiddy García (fkabreiddy)</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/fkabreiddy/RelativeDateTimeAndNumber</RepositoryUrl>
 
     </PropertyGroup>
 
